dln this is a really minimal autoconf file

AC_INIT([bigforth],[2.1.7],[http://sourceforge.net/tracker/?atid=101028&group_id=1028&func=browse])
AC_CANONICAL_HOST
AC_PROG_CC

case "$host_os" in
	*win32|cygwin)
		EXTFLAGS="-mno-cygwin"
		WINDOWS="-mwindows"
		ARCHFLAGS=""
		INI="bigforth.ini"
		XINI="xbigforth.ini"
		;;
	*)
		EXTFLAGS=""
		WINDOWS=""
		ARCHFLAGS=""
		INI=".bigforthrc"
		XINI=".xbigforthrc"
		;;
esac

case "$host_cpu" in
	*x86_64*)
		ARCHFLAGS="-m32"
		;;
esac

test "x$prefix" = xNONE && prefix=$ac_default_prefix
exec_prefix=$prefix
eval libdirpath=$libdir

AC_CHECK_LIB(dl,dlopen)
AC_SUBST(EXTFLAGS)
AC_SUBST(ARCHFLAGS)
AC_SUBST(WINDOWS)
AC_SUBST(libdirpath)
AC_SUBST(INI)
AC_SUBST(XINI)

AC_OUTPUT(Makefile $INI $XINI)
